methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:37: error: not found: value r
     carreV(r)
            ^